Corregimos error en filtros y ahora la paginacion funciona correctamente

--- a/src/components/FiltersPersonage.astro
+++ b/src/components/FiltersPersonage.astro
@@ -39,18 +39,18 @@ const speciesOptions = await species();
           <select
             id="species-filter"
             class="select-custom px-3 py-2 pr-10 rounded-lg border-2 min-w-44 border-primary/20 text-white focus:outline-none focus:border-primary focus:shadow-md-primary hover:bg-bg-card/95 hover:border-primary/40 transition-all duration-200 appearance-none cursor-pointer text-sm"
-            style="background-image: var(--gradient-select); box-shadow: var(--shadow-inset-select);"
+            style="background-image: var(--color-gradient-select); box-shadow: var(--shadow-inset-select);"
           >
             <option
               value="all"
-              class="bg-bg-card text-text-primary p-3 rounded-lg font-medium transition-all option-custom"
+              class="bg-bg-card text-text-primary p-3 rounded-lg font-medium transition-all option-custom options"
               >Todas las especies</option
             >
             {
               speciesOptions.map((specie) => (
                 <option
                   value={specie.toLowerCase()}
-                  class="bg-bg-card text-text-primary p-3 rounded-lg font-medium transition-all option-custom hover:bg-option-hover-bg"
+                  class="text-text-primary p-3 rounded-lg font-medium transition-all option-custom hover:bg-option-hover-bg bg-bg-card options"
                 >
                   {" "}
                   {specie}{" "}
@@ -84,7 +84,7 @@ const speciesOptions = await species();
   ::picker(select) {
     margin-top: 0.5rem;
     padding: 0.5rem;
-    background-color: var(--color-bg-card);
+    background: var(--color-gradient-select);
     border-radius: 1rem;
     margin-bottom: 0.5rem;
   }
@@ -97,5 +97,8 @@ const speciesOptions = await species();
     background-color: var(--color-option-selected-bg);
     color: var(--color-primary);
     font-weight: 600;
+  }
+  .options ~ .options {
+    margin-top: 3px;
   }
 </style>
