--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -7,29 +7,46 @@
 
   --color-primary: #97ce4c;
   --color-secondary: #00b5cc;
-  --color-bg-primary: #00010a;
+
   --color-gradient-inter-card: linear-gradient(135deg, #39ff1426 0%, #00ffff14 50%, transparent 100%);
   --color-gradient-name-card:  linear-gradient(90deg, #39FF14, #00ffff);
+  --color-gradient-select: linear-gradient(to bottom, rgba(26, 29, 41, 0.95), rgba(26, 29, 41, 1));
+  
+  --color-bg-primary: #00010a;
+  --color-bg-filters: #14213C;
   --color-bg-card: #121212a6;
+
   --color-border-card: #39ff1433;
+
   --color-text-primary: #e8f5e9;
   --color-text-dark: #282828;
   --color-text-secondary: #b0bec5;
   --color-text-muted: #78909c;
-  --color-status-alive: #4caf50;
-  --color-status-dead: #f44336;
-  --color-status-unknown: #9e9e9e;
-  --color-gradient-select: linear-gradient(to bottom, rgba(26, 29, 41, 0.95), rgba(26, 29, 41, 1));
+
+  /* --color-status-alive: #4caf50; */
+  /* --color-status-dead: #f44336; */
+  /* --color-status-unknown: #9e9e9e; */
   --color-option-hover-bg: rgba(151, 206, 76, 0.1);
   --color-option-selected-bg: rgba(151, 206, 76, 0.3);
+
   --shadow-md-gray: 0 0 18px rgb(200 200 200 / .1);
   --shadow-md-primary: 0 0 20px #97ce4c30;
   --shadow-portal: 0 0 20px rgb(151 206 76 / 0.3);
   --shadow-inset-select: inset 0 1px 3px rgba(0, 0, 0, 0.3);
   --shadow-card:0 8px 32px #00000099,0 0 30px #39ff1426;
-  /* --shadow-card-hover:0 20px 40px #000000cc, 0 0 50px #39ff1466, inset 0 0 30px #39ff141a; */
   --shadow-card-hover:0 5px 10px #000000cc, 0 0 15px #39ff1466, inset 0 0 5px #39ff141a;
 
 
   --font-inter: 'Inter Tight Variable', sans-serif;
+}
+
+.character-card {
+  transition: all 0.2s ease-in;
+  &:hover {
+    transform: translateY(-8px) scale(1.03);
+    box-shadow: var(--shadow-card-hover);
+  }
+  &::before {
+    background: var(--color-gradient-inter-card);
+  }
 }
