--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -8,6 +8,9 @@ import Pagination from "@/components/Pagination.astro";
 import { getNumberPagination } from "@/services/getNumberPagination";
 // import PersonagesWithPagination from "@/components/react/PersonagesWithPagination";
 
+// Obtener el número de página desde la URL
+const currentPage = parseInt(Astro.url.searchParams.get("page") || "1");
+
 const numberPagination = await getNumberPagination();
 ---
 
@@ -19,5 +22,5 @@ const numberPagination = await getNumberPagination();
 	<SearchPersonage />
 	<FiltersPersonage />
 	<Personages />
-	<Pagination totalPages={numberPagination} />
+	<Pagination totalPages={numberPagination} currentPage={currentPage} />
 </Layout>
