--- a/src/components/FiltersPersonage.astro
+++ b/src/components/FiltersPersonage.astro
@@ -5,8 +5,16 @@ import FilterIcon from "@assets/filter-icon.svg";
 import RefreshIcon from "@assets/refresh.svg";
 
 import ArrowDownIcon from "@assets/arrow-down.svg";
-import { species } from "@utils/getSpecies";
-const speciesOptions = await species();
+
+// Obtener el número de página desde la URL
+const currentPage = Astro.url.searchParams.get("page") || "1";
+
+const response = await fetch(
+  new URL(`/api/get-info-filter?page=${currentPage}`, Astro.url.origin),
+);
+const infoFilter = await response.json();
+const speciesOptions = infoFilter.species;
+const statusOptions = infoFilter.status;
 ---
 
 <article class="w-full max-w-3xl mx-auto p-4">
@@ -24,9 +32,15 @@ const speciesOptions = await species();
         >
         <div class="flex items-center flex-wrap gap-2">
           <ButtonFilter text="Todos" value="all" filter="status" />
-          <ButtonFilter text="Vivo" value="alive" filter="status" />
-          <ButtonFilter text="Muerto" value="dead" filter="status" />
-          <ButtonFilter text="Desconocido" value="unknown" filter="status" />
+          {
+            statusOptions.map((status: any) => (
+              <ButtonFilter
+                text={status.charAt(0).toUpperCase() + status.slice(1)}
+                value={status.toLowerCase()}
+                filter="status"
+              />
+            ))
+          }
         </div>
       </div>
 
@@ -47,13 +61,12 @@ const speciesOptions = await species();
               >Todas las especies</option
             >
             {
-              speciesOptions.map((specie) => (
+              speciesOptions.map((specie: any) => (
                 <option
                   value={specie.toLowerCase()}
                   class="text-text-primary p-3 rounded-lg font-medium transition-all option-custom hover:bg-option-hover-bg bg-bg-card options"
                 >
-                  {" "}
-                  {specie}{" "}
+                  {specie}
                 </option>
               ))
             }
