--- a/src/styles/pagination.css
+++ b/src/styles/pagination.css
@@ -22,7 +22,7 @@
   flex-shrink: 0;
   width: 50px;
   text-align: center;
-  cursor: pointer;
+  /* cursor: pointer; */
   font-weight: 500;
   user-select: none;
   transition: all 0.4s cubic-bezier(0.4, 0, 0.2, 1);
