Mejorando diseño de los filters

--- a/src/components/ButtonFilter.astro
+++ b/src/components/ButtonFilter.astro
@@ -9,7 +9,7 @@ const { text, value, filter } = Astro.props;
 ---
 
 <button
-  class={`filter-btn px-3 py-2 rounded-lg bg-bg-card border-2 text-text-secondary hover:text-white hover:bg-bg-card/80 transition-all duration-200 text-xs font-medium cursor-pointer block border-status-unknown/20 hover:border-status-unknown/40`}
+  class={`filter-btn w-full h-full rounded-lg  text-text-secondary hover:text-white hover:bg-bg-card/80 transition-all duration-200 text-xs font-medium cursor-pointer block border-status-unknown/20 hover:border-status-unknown/40`}
   data-filter={filter}
   data-value={value}
 >
