--- a/src/sections/HeaderPage.astro
+++ b/src/sections/HeaderPage.astro
@@ -1,7 +1,7 @@
 <header
   class="w-full p-2 py-3 max-w-7xl mx-auto flex items-center flex-col gap-1"
 >
-  <h1 class="font-semibold text-primary leading-tight">
+  <h1 class="font-semibold text-primary leading-tight text-center">
     🛸 Rick and Morty Explorer
   </h1>
   <p class="text-text-secondary">Explora el multiverso de Rick and Morty</p>
