--- a/src/components/SearchPersonage.astro
+++ b/src/components/SearchPersonage.astro
@@ -1,10 +1,10 @@
-<div class="w-full max-w-xl mx-auto p-4 mt-4">
+<div class="w-full">
   <form
     id="search-form"
-    class="w-full flex flex-col md:flex-row gap-4 bg-bg-card/50 p-2 rounded-xl hover:shadow-md-gray transition-shadow duration-200 ease-in"
+    class="w-full hover:shadow-md-gray transition-shadow duration-200 ease-in"
   >
     <input
-      class="border-2 border-primary/20 p-2 rounded-md bg-bg-input text-white w-full focus:outline-none focus:border-primary transition-all duration-200 ease-in bg-bg-card/50 placeholder:text-text-secondary/50 placeholder:text-xs"
+      class="border-2 border-primary/20 p-2 rounded-lg bg-bg-input text-white w-full focus:outline-none focus:border-primary transition-all duration-200 ease-in bg-bg-card/50 placeholder:text-text-secondary/50 placeholder:text-xs"
       type="text"
       name="search"
       id="search-input"
@@ -16,5 +16,12 @@
 <style>
   form:has(input:focus) {
     box-shadow: var(--shadow-md-gray);
+  }
+  form:has(input:not(:placeholder-shown)) {
+    box-shadow: var(--shadow-md-gray);
+  }
+
+  input:not(:placeholder-shown) {
+    border-color: var(--color-primary);
   }
 </style>
